fixed wiki popup dark mode

--- a/bibleup/css/wiki.less
+++ b/bibleup/css/wiki.less
@@ -88,4 +88,12 @@
 	@color: #333333;
 	background: @bg1;
 	color: #f2f2f2;
+
+	#bu-popup-version {
+		color: #333;
+	  }
+
+	  #bu-popup-close {
+		  color: #fff;
+	  }
   }
